@@ -1,5 +1,12 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Presume <signal> provides SIG{HUP,INT,PIPE,QUIT,TERM,XCPU,XFSZ}.
+
+	* rcsutil.c (regsigs): Remove #ifdef foo and #endif, for
+	foo: SIGHUP, SIGINT, SIGPIPE, SIGQUIT, SIGTERM, SIGXCPU, SIGXFZ.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Presume <signal.h> provides `SA_SIGINFO'.
 
 	* rcsutil.c: Throughout, take `defined SA_SIGINFO' to be 1.
